--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     ],
     "require": {
         "php": ">=5.5.9",
-        "illuminate/support": "5.*|^6",
-        "guzzlehttp/guzzle": "~6.0",
+        "illuminate/support": ">6.0",
+        "guzzlehttp/guzzle": "~7.0",
         "monolog/monolog": "^1.12|^2.0"
     },
     "require-dev": {
